@startuml
left to right direction
skinparam classAttributeIconSize 0

' =========================
'   ENUMERATIONS
' =========================

enum TaskStatus {
  OPEN
  COMPLETED
  CANCELLED
}

enum PriorityLevel {
  LOW
  MEDIUM
  HIGH
}

enum CollaboratorStatus {
  OK
  OVERLOADED
}

enum CollaboratorCategory {
  JUNIOR
  INTERMEDIATE
  SENIOR
}

enum DayOfWeek {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

' =========================
'   CORE DOMAIN CLASSES
' =========================

class Task {
  id : int
  title : String
  description : String [0..1]
  creationDate : DateTime
  dueDate : DateTime [0..1]
  priorityLevel : PriorityLevel
  status : TaskStatus
}

class Project {
  id : int
  name : String
  description : String [0..1]
}

class Subtask {
  id : int
  title : String
  status : TaskStatus
}

class Tag { 
  id : int
  name : String
}

class ActivityEntry {
  timestamp : DateTime
  description : String
}

abstract class Recurrence {
  startDate : DateTime
  endDate : DateTime
  interval : int
}

class DailyRecurrence {
}

class WeeklyRecurrence {
  daysOfWeek : Set<DayOfWeek>
}

class MonthlyRecurrence {
  dayOfMonth : int
}

class Collaborator {
  name : String
  category : CollaboratorCategory
  taskLimit : int
  status : CollaboratorStatus
}

' =========================
'   GENERALIZATION
' =========================

Recurrence <|-- DailyRecurrence
Recurrence <|-- WeeklyRecurrence
Recurrence <|-- MonthlyRecurrence

' =========================
'   ASSOCIATIONS
' =========================

Task "0..*" -- "0..1" Project : grouped in >

Task "1" *-- "0..*" Subtask : contains >

Task "0..*" -- "0..*" Tag : labelled with >

Task "1" *-- "0..*" ActivityEntry : records >

Task "0..*" -- "0..1" Recurrence : has-a >

Task "0..*" -- "0..1" Collaborator : assigned to <

Project "1" -- "0..*" Collaborator : includes >

Subtask "0..*" --> "1" Collaborator : assignedTo

@enduml